# ema

./: .env  .env.example  .gitignore  README.md  RUN.md  main.py  pyproject.toml  requirements.txt  shell.nix
face-recognition-api/: Dockerfile  README.md  requirements.txt
face-recognition-api/src/: main.py
migrations/: env.py  script.py.mako
migrations/versions/: 20260611_0001_initial_schema.py  20260611_0002_seed_default_admin.py  20260612_0003_add_refresh_tokens.py
mongo/migrations/: 001_seed_first_admin.py  002_hash_iam_passwords.py  runner.py
scripts/: bootstrap.sh
src/: main.py
src/algorithms/: __init__.py  backprop.py  optimizers.py  q_learning.py  recursion_utils.py
src/api/: routes.py  schemas.py
src/calibration/: __init__.py  logistic_calibrator.py  pair_sampling.py  q_threshold_policy.py  threshold_calibrator.py
src/config/: dotenv.py  settings.py
src/core/: config.py  exceptions.py
src/data/: __init__.py  data_layer.py
src/feature_extraction/: __init__.py  feature_extraction_layer.py
src/features/: __init__.py  backprop.py  logistic_calibrator.py  optimizers.py  pair_sampling.py  q_learning.py  q_threshold_policy.py  recursion_utils.py  threshold_calibrator.py
src/inference/: __init__.py
src/layers/: data_layer.py  inference_layer.py  preprocessing_layer.py  storage_layer.py
src/models/: detector.py  registry.py
src/post_processing/: __init__.py  postprocessing_layer.py
src/postprocessing/: __init__.py  output_layer.py  storage_layer.py
src/preprocessing/: __init__.py
src/services/: recognition_service.py
(+282 files in other folders)
