[project]
name = "ema-face-recognition-api"
version = "0.1.0"
description = "FastAPI face recognition service (MVP)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-multipart>=0.0.9",
  "numpy>=2.0",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
]

[project.optional-dependencies]
ml = [
  "insightface>=0.7.3",
  "onnxruntime>=1.18",
  "opencv-python-headless>=4.10",
]

[tool.uv]
package = false
