[project]
name = "ema-face-recognition-api"
version = "0.1.0"
description = "FastAPI face recognition service (MVP)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "PyJWT>=2.8",
  "numpy>=2.0",
  "alembic>=1.13",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
]

[project.optional-dependencies]
ml = [
  "insightface>=0.7.3",
  "onnxruntime>=1.18",
  "opencv-python-headless>=4.10",
]

[tool.uv]
package = false

[tool.alembic]
script_location = "migrations"
prepend_sys_path = ["."]
